--- a/airplane_mode/www/shops/index.html
+++ b/airplane_mode/www/shops/index.html
@@ -1,6 +1,6 @@
 {% extends "templates/pages/base.html" %}
 
-{% block title %}Shop Directory{% endblock %}
+{% block title %}Shops {% endblock %}
 
 {% block head %}
 <link rel="stylesheet" href="/assets/airplane_mode/css/shop.css">
@@ -31,7 +31,7 @@
     </div>
 
     <div class="shop-list">
-        <!-- Shop List Display -->
+        <!-- Shop List Display on DOM-->
         {% if shops %}
                 {% for shop in shops %}
                     <div class="single-shop-container ">
@@ -42,13 +42,13 @@
                             <h2>{{ shop.shop_name }} ({{ shop.shop_number }})</h2>
                             <p class="status-badge">{{ shop.status }}</p>
                             <ul>
-
+                               
                                 <li><strong>Rent Amount:</strong> {{ shop.rent_amount }}</li>
                                 <li><strong>Tenant:</strong> {{ shop.tenant }}</li>
-                                <li><strong>Contract Start Date:</strong> {{ shop.contract_start_date }}</li>
-                                <li><strong>Contract Expiry Date:</strong> {{ shop.contract_expiry_date }}</li>
+                                <li><strong>Contract Start Date: </strong> {{ frappe.format_date(shop.contract_start_date) }}</li>
+                                <li><strong>Contract Expiry Date: </strong> {{ frappe.format_date(shop.contract_expire_date) }}</li>
                             </ul>
-                            <a href="#">Show Details</a>
+                            <a href=/shops/{{shop.name}}>Show Details</a>
                         </div>
                        
                     </div>
