--- a/airplane_mode/www/shops/index.html
+++ b/airplane_mode/www/shops/index.html
@@ -44,11 +44,13 @@
                             <ul>
                                
                                 <li><strong>Rent Amount:</strong> {{ shop.rent_amount }}</li>
+                                {% if shop.tenant %}
                                 <li><strong>Tenant:</strong> {{ shop.tenant }}</li>
+                                {%endif%}
                                 <li><strong>Contract Start Date: </strong> {{ frappe.format_date(shop.contract_start_date) }}</li>
                                 <li><strong>Contract Expiry Date: </strong> {{ frappe.format_date(shop.contract_expire_date) }}</li>
                             </ul>
-                            <a href=/shops/{{shop.name}}>Show Details</a>
+                            <a href="/shops/{{shop.name | urlencode }}" class="single-page-link">Show Details</a>
                         </div>
                        
                     </div>
